--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'com.jfrog.bintray'
 
 ext {
     bintrayRepo = 'maven'
-    bintrayName = 'cybersource-inapp-android'
+    bintrayName = 'inappsdk'
 
     publishedGroupId = 'com.cybersource'
     libraryName = 'CYBSInAppSDK'
@@ -48,6 +48,8 @@ android {
         }
     }
 }
+
+group = publishedGroupId // Maven Group ID for the artifact
 
 install {
     repositories.mavenInstaller {
