--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'com.jfrog.bintray'
 
 ext {
     bintrayRepo = 'maven'
-    bintrayName = 'inappsdk'
+    bintrayName = 'cybersource-inapp-android'
 
     publishedGroupId = 'com.cybersource'
     libraryName = 'CYBSInAppSDK'
